# glow2-haskell

./: .gitignore  .gitmodules  .stylish-haskell.yaml  LICENSE  README.md  cabal.project  glow.cabal
.github/workflows/: build.yml
agda/Glow/Simple/: AST.agda  Categorical.agda  ContextMore.agda  ContextMoreGT.agda  Example.agda  ExecTrace.agda  ParamsSubst.agda  ProjectOut.agda  TraceNice.agda  TraceNiceTest.agda  UnsafeProjectOut.agda  VarSubst.agda  VarSubstGT.agda  VarSubstPrim.agda
agda/Glow/Simple/Lurk/: Container.agda  ControlFlowTrans.agda  ControlFlowTransHLP.agda  States.agda  StatesPrim.agda  StatesPrimPrim.agda  Translation.agda  cf.lurk  glow.lurk
doc/: ir-spec.md
exe/: Main.hs
glow/: README.md  glow.cabal
glow/exe/: LurkConsensusMock.hs  LurkFromAgda.hs  RunGlow.hs
glow/lib/Glow/: Ast.hs  EVM.hs  Fresh.hs  Main.hs  MainLurk.hs  Parser.hs  Prelude.hs  StateChannel.hs
glow/lib/Glow/Ast/: BlockParamPassing.hs  Classes.hs  Common.hs  HighLevel.hs  IR1.hs  LastLeg.hs  LiftedFunctions.hs  LowLevel.hs  Surface.hs  SurfaceFunctor.hs  SurfaceGADT.hs  SurfaceGrammar.hs  Typechecked.hs
glow/lib/Glow/Ast/Targets/: Lurk.hs
glow/lib/Glow/Consensus/: Lurk.hs  LurkMock.hs  StateChannel.hs
glow/lib/Glow/Foreign/Lurk/: Base.hs
glow/lib/Glow/Gerbil/: Fresh.hs  ImportSExpr.hs  OrdSExpr.hs  ParseAnf.hs  ParseCommon.hs  ParseProject.hs  Parser.hs  SwitchBranch.hs  Types.hs
glow/lib/Glow/Gerbil/Client/: Types.hs
glow/lib/Glow/Mock/Lurk/: Consensus.hs  Server.hs
glow/lib/Glow/Precompiled/: Base.hs  LMonad.hs  LMonadToLurk.hs  Mark.hs
glow/lib/Glow/Runtime/: Interaction.hs
glow/lib/Glow/Runtime/Interaction/: Base.hs  BuiltIns.hs  Interact.hs  InteractWithServer.hs  InterpretAnf.hs  STM.hs  Sim.hs
glow/lib/Glow/Runtime/Lurk/: Commands.hs
glow/lib/Glow/Targets/: EVM.hs
glow/lib/Glow/Targets/EVM/Assembler/: Parser.hs
glow/lib/Glow/Translate/: FunctionLift.hs  GerbilTypeToLastLeg.hs  LastLegToLLVM.hs  LiftedFunctionsToBlockParam.hs  LurkFromAgdaDev.hs  LurkToSExpr.hs
glow/tests/: Main.hs
glow/tests/Tests/: AstCommon.hs  Fresh.hs  FunctionLift.hs  LastLegToLLVM.hs  Lurk.hs  Parser.hs  TranslateType.hs
glow/tests/Tests/Ast/: Common.hs  FreeVars.hs
glow/tests/Tests/Runtime/: Interaction.hs
lib/Glow/: Ast.hs  Main.hs  Parser.hs  Prelude.hs  StateChannel.hs
lib/Glow/Consensus/: Local.hs  StateChannel.hs
lib/Glow/Gerbil/: Parser.hs  Types.hs
lib/Glow/Gerbil/Client/: Types.hs
lib/Glow/Runtime/: Interaction.hs
lib/Glow/Runtime/Interaction/: InMemory.hs  STM.hs
scripts/: format.sh
tests/: Main.hs
tests/Tests/: Parser.hs
tests/Tests/Runtime/: Interaction.hs
