cabal-version:       2.2
name:                glow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://glow-lang.org
license:             Apache-2.0
license-file:        LICENSE
author:              Glow Developers
maintainer:          contact@mukn.io
copyright:           2022 MuKn
-- category:
  -- Codec
  -- Concurrency
  -- Control
  -- Data
  -- Database
  -- Development
  -- Distribution
  -- Game
  -- Graphics
  -- Language
  -- Math
  -- Network
  -- Sound
  -- System
  -- Testing
  -- Text
  -- Web

build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , .gitignore

source-repository head
  type:     git
  branch:   master
  location: https://github.com/glow-lang/glow

common shared-opts
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  build-depends:
      base >=4.14 && <5
    , aeson ^>=2.0.3
    , base64-bytestring ^>=1.2.1
    , bytestring >=0.10.2 && <0.12
    , containers ^>=0.6.5
    , zenhack-prelude ^>=0.1
    , text ^>=1.2.5
    , megaparsec >=6.5 && <9.3
    , mtl ^>=2.2.2
    , concurrency ^>=1.11.0
    , pretty-show ^>=1.10
    , prettyprinter ^>=1.7.1
    , sexpr-parser ^>=0.2.2
    , typed-process ^>=0.2.8
    , lens
    , haskeline
    , ansi-terminal
    , monad-loops
    , transformers
  default-language:    Haskell2010

library
  import: shared-opts
  hs-source-dirs: lib
  exposed-modules:
      Glow.Main

    , Glow.Ast.Surface
    , Glow.Ast.LastLeg
    , Glow.Ast.Targets.Lurk
    , Glow.Parser
    , Glow.Prelude
    , Glow.Runtime.Interaction
    , Glow.Runtime.Interaction.STM
    , Glow.Translate.GerbilTypeToLastLeg
    , Glow.Translate.LurkToSExpr
    , Glow.Translate.LurkFromAgdaDev    
    , Glow.Consensus.Local
    , Glow.Consensus.StateChannel
    , Glow.Consensus.LurkMock
    , Glow.StateChannel

    , Glow.Gerbil.Types
    , Glow.Gerbil.ParseAnf
    , Glow.Gerbil.ParseCommon
    , Glow.Gerbil.ParseProject
    , Glow.Gerbil.ImportSExpr
    , Glow.Gerbil.Client.Types

executable glow
  import: shared-opts
  build-depends: glow
  hs-source-dirs: exe
  main-is: Main.hs

executable lurk-from-agda
  import: shared-opts
  build-depends: glow
  hs-source-dirs: exe
  main-is: LurkFromAgda.hs

executable lurk-consensus-mock
  import: shared-opts
  build-depends: glow
  hs-source-dirs: exe
  main-is: LurkConsensusMock.hs      

test-suite tests
  import: shared-opts
  build-depends:
      glow
    , hspec ^>=2.9.4
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
      Tests.Parser
    , Tests.Runtime.Interaction
    , Tests.Lurk
    , Tests.TranslateType
